UtahLiveDataTest/src/objects/LEAPrivateSchool__c.object
<CustomObject>
    <description>LEA Private School</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InternalUniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>InternalUniqueId</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LEANumberforREI__c</fullName>
        <label>LEA Number for REI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEA__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>LEA</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LEA Private Schools</relationshipLabel>
        <relationshipName>LEA_Private_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReceivingFundsPicklist__c</fullName>
        <label>ReceivingFundsPicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Receiving Funds</fullName>
                </value>
                <value>
                    <fullName>Not Receiving Funds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SchoolName__c</fullName>
        <label>School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolNumber__c</fullName>
        <label>School Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolYear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>School Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>LEA Private Schools</relationshipLabel>
        <relationshipName>LEA_Private_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>LEA Private School</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LEA Private School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LEA Private Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>